...
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"/>

<!--    <EditText-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/locationEditText"-->
<!--        android:background="@color/colorTextIcons"-->
<!--        android:layout_above="@+id/findRestaurantsButton"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:padding="5dp"-->
<!--        android:inputType="text"-->
<!--        android:hint="Enter Zip Code"-->
<!--        android:layout_centerHorizontal="true" />-->

...
