...
        tools:layout="@layout/fragment_restaurant_list"/>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/locationTextView"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:visibility="gone" />-->

<!--    <TextView-->
...
